# test_bin

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: bin.rs  lib.rs
tests/: integration_test.rs
